--- a/index.css
+++ b/index.css
@@ -67,6 +67,10 @@ h1 {
     border-radius: 3px;
     border: 1px solid darkgray; 
 }
+
+#mobile{
+    margin-bottom: 1rem;
+}
     
 .container-input .btn-send {
     background: crimson;
@@ -90,7 +94,4 @@ span{
     display: none;
 }
 
-textarea{
-    height: 20rem;
-}
   
